--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "punycode": "^2.1.1",
@@ -16,8 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-storage": "^1.0.1",
-    "react-native-web": "~0.13.12",
-    "@react-native-async-storage/async-storage": "^1.13.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
