--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.0",
     "expo": "~41.0.1",
+    "expo-file-system": "~11.0.2",
+    "expo-media-library": "~12.0.2",
     "expo-status-bar": "~1.0.4",
     "punycode": "^2.1.1",
     "react": "16.13.1",
